--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
   <link 
     rel="stylesheet" 
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="static/css/style.css">
 </head>
 
 <body class="bg-light">
+  <div class="wrapper">
+    <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+       <a class="navbar-brand" href="#">Chart Types</a>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="#bubble">Bubble Chart</a>
+          <a class="nav-item nav-link" href="#bar">Bar Chart</a>
+        </div>
+      </div> 
+    </nav>
+  </div>
 
   <div class="container">
     <div class="row">
@@ -51,7 +62,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="charts.js"></script>
+  <script src="static/js/charts.js"></script>
 
 </body>
 
