--- a/index.html
+++ b/index.html
@@ -15,13 +15,8 @@
 <body class="bg-light">
   <div class="wrapper">
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-       <a class="navbar-brand" href="#">Chart Types</a>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="#bubble">Bubble Chart</a>
-          <a class="nav-item nav-link" href="#bar">Bar Chart</a>
-        </div>
-      </div> 
+       <a class="navbar-brand" href="#bubble">Bubble Chart</a>
+       <a class="navbar-brand" href="#bar">Bar Chart</a>
     </nav>
   </div>
 
